# pyshot

./: .gitignore  CMakeLists.txt  README.md  example_pyshot.py  pyshot.pyx  setup.py
include/: mesh.h  shot_descriptor.h
pyshot/: .gitignore  CMakeLists.txt  example_pyshot.py  pyshot.pyx  setup.py
pyshot/include/: mesh.h  shot_descriptor.h
pyshot/src/: CMakeLists.txt  shot_descriptor.cpp
src/: CMakeLists.txt  calc_shot.cpp  main.cpp  shot_descriptor.cpp
tests/: test_descriptors.py
